punto1y2/gramatica/NoSQLParser.py
# Generated from NoSQL.g4 by ANTLR 4.13.2
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO


class NoSQLParser(Parser):
    atn = ATNDeserializer().deserialize(serializedATN())
    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]
    sharedContextCache = PredictionContextCache()

    #tipos de Tokens 
    T__0=1; T__1=2; T__2=3; T__3=4; T__4=5; T__5=6; T__6=7; T__7=8; T__8=9
    AGREGAR=10; OBTENER=11; CAMBIAR=12; QUITAR=13; TODO=14
    VAL_NUMERO=15; VAL_TEXTO=16; IDENTIFICADOR=17; ESPACIOS=18

    # nombres de las Reglas
    RULE_inicio = 0
    RULE_operacion = 1
    RULE_cmd_insertar = 2
    RULE_cmd_buscar = 3
    RULE_cmd_modificar = 4
    RULE_cmd_remover = 5
    RULE_seleccion_campos = 6
    RULE_estructura_datos = 7
    RULE_asignacion = 8
    RULE_dato = 9
    RULE_coleccion_datos = 10
    RULE_id_entidad = 11

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None

    class InicioContext(ParserRuleContext):
        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

    def inicio(self):
        localctx = NoSQLParser.InicioContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_inicio)
        try:
            self.enterOuterAlt(localctx, 1)
            self.exitRule()
        except RecognitionException as re:
            localctx.exception = re
            self._interp.reportError(self, re)
            self._errHandler.recover(self, re)
        return localctx
